# Voxybox

./: CMakeLists.txt  README.md  build.bat
.github/workflows/: cmake.yml
assets/: CMakeLists.txt
assets/shaders/: FlatColor_Frag.glsl  FlatColor_Vert.glsl  TextureShader.glsl
include/: main.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
